--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
         <h3>Our Doctors</h3>
         <div class="doctors">
           <div class="doc">
-            <img src="https://storage.googleapis.com/gweb-uniblog-publish-prod/images/Female_Indian_Cardiologist.width-1000.format-webp.webp" alt="Photo of Dr. Anjali Sharma">
+             <img src="https://images.unsplash.com/photo-1612349317150-e413f6a5b16d?q=80&w=800&auto=format&fit=crop" alt="डॉ. अंजलि शर्मा का फोटो">
             <div><strong>Dr. Anjali Sharma</strong><div class="small">Cardiologist</div></div>
           </div>
           <div class="doc">
-            <img src="https://storage.googleapis.com/gweb-uniblog-publish-prod/images/Male_Indian_Neurologist.width-1000.format-webp.webp" alt="Photo of Dr. Rajesh Verma">
+            <img src="https://images.unsplash.com/photo-1559839734-2b71ea197ec2?q=80&w=800&auto=format&fit=crop" alt="डॉ. राजेश वर्मा का फोटो">
             <div><strong>Dr. Rajesh Verma</strong><div class="small">Neurologist</div></div>
           </div>
           <div class="doc">
-            <img src="https://storage.googleapis.com/gweb-uniblog-publish-prod/images/Female_Indian_Pediatrician.width-1000.format-webp.webp" alt="Photo of Dr. Priya Kapoor">
+            <img src="https://images.unsplash.com/photo-1622253692010-333f2da6031d?q=80&w=800&auto=format&fit=crop" alt="डॉ. प्रिया कपूर का फोटो">
             <div><strong>Dr. Priya Kapoor</strong><div class="small">Pediatrician</div></div>
           </div>
         </div>
