--- a/policy.html
+++ b/policy.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
 <head>
@@ -6,12 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Policy — Healthcare Tips</title>
   <link rel="stylesheet" href="assets/style.css" />
+  <style>
+    .article-page h2 { margin-top: 40px; }
+    .article-page h3 { margin-top: 24px; }
+    .article-page ul { list-style-type: disc; padding-left: 20px; }
+  </style>
 </head>
 <body>
 
 <header class="container">
   <div class="nav">
-    <div class="brand"><a href="index.html">🏥 <span data-site-name>Healthcare Tips</span></a></div>
+    <div class="brand"><a href="index.html">🏥 <span data-site-name></span></a></div>
     <button class="menu" onclick="toggleMenu()">☰</button>
     <div id="navlinks" class="links">
       <a href="index.html">Home</a>
@@ -23,24 +27,57 @@
   </div>
 </header>
 
-  <main class="container">
-    <h1>Policy</h1>
-    <p class="small">Last updated: 2025-08-24</p>
+  <main class="container article-page">
+    <h1>Our Policies</h1>
+    <p class="small">Last Updated: August 25, 2025</p>
+
     <h2>Disclaimer</h2>
-    <p>Content on this site is for educational purposes only and does not substitute professional medical advice. Always consult a qualified healthcare provider.</p>
-    <h2>Privacy</h2>
-    <p>We do not collect personal data beyond what you submit via the contact form. No tracking cookies.</p>
-    <h2>Attribution</h2>
-    <p>Site by <span data-maker>Maker</span>. Logos shown are placeholders.</p>
+    <p>The information provided on this website (<span data-site-name></span>) is for informational and educational purposes only. The content is not intended to be a substitute for professional medical advice, diagnosis, or treatment.</p>
+    <p>Always seek the advice of your physician or other qualified health provider with any questions you may have regarding a medical condition. Never disregard professional medical advice or delay in seeking it because of something you have read on this website. If you think you may have a medical emergency, call your doctor immediately.</p>
+
+    <h2>Privacy Policy</h2>
+    <p>We are committed to respecting and protecting your privacy. This Privacy Policy outlines how we collect, use, and safeguard your information when you visit our website.</p>
+    
+    <h3>Information We Collect</h3>
+    <p>We may collect personally identifiable information, such as your name and email address, only when you voluntarily submit it to us through our contact form. This information is used solely to respond to your inquiries.</p>
+
+    <h3>Cookies</h3>
+    <p>This website does not use tracking cookies to monitor your browsing habits or collect personal data.</p>
+
+    <h3>How We Use Your Information</h3>
+    <p>The information we collect is used in the following ways:</p>
+    <ul>
+      <li>To respond to your questions, comments, or inquiries submitted via the contact form.</li>
+      <li>To improve our website and the services we offer.</li>
+    </ul>
+    <p>We do not sell, trade, or otherwise transfer your personally identifiable information to outside parties.</p>
+
+    <h3>Third-Party Links</h3>
+    <p>Occasionally, our website may contain links to other third-party websites. These sites have separate and independent privacy policies, and we have no responsibility or liability for the content and activities of these linked sites.</p>
+
+    <h2>Terms of Use</h2>
+    <p>By accessing and using this website, you agree to be bound by the following terms and conditions:</p>
+    <ul>
+      <li>All content on this site, including text, graphics, and images, is the property of <span data-owner></span> and is protected by copyright laws.</li>
+      <li>You agree not to use this website for any unlawful purpose.</li>
+      <li>You are solely responsible for any decisions made based on the information provided on our website.</li>
+    </ul>
+
+    <h3>Changes to Our Policies</h3>
+    <p>We reserve the right to update these policies at any time. Any changes will be posted on this page.</p>
+    
+    <h3>Contact Us</h3>
+    <p>If you have any questions regarding these policies, please contact us through our 'Contact' page.</p>
   </main>
 
 <footer class="container footer">
   <div>
-    © <span data-year></span> <span data-owner>Owner Name</span>. All rights reserved. · Built by <span data-maker>Maker</span>
+    © <span data-year></span> <span data-owner></span>. All rights reserved. · Built by <span data-maker></span>
   </div>
   <div id="social-links" class="small" style="margin-top:6px;"></div>
-  <div class="small" style="margin-top:6px;"><span data-address>Address</span> · <a href="mailto:" data-email>Email</a> · <span data-phone>Phone</span></div>
+  <div class="small" style="margin-top:6px;"><span data-address></span></div>
 </footer>
+
 <script src="assets/app.js"></script>
 
 </body>
