--- a/about.html
+++ b/about.html
@@ -6,12 +6,73 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>About — Healthcare Tips</title>
   <link rel="stylesheet" href="assets/style.css" />
+  <style>
+    .about-header {
+      text-align: center;
+      padding: 40px 0;
+      background-color: #f8fafc;
+      border-bottom: 1px solid var(--border-color);
+    }
+    .about-header h1 {
+      margin-top: 0;
+    }
+    .about-header p {
+      max-width: 700px;
+      margin: 10px auto 0;
+      font-size: 1.1rem;
+      color: var(--muted-color);
+    }
+    .team-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+      gap: 30px;
+      margin-top: 20px;
+    }
+    .team-member-card {
+      background-color: var(--card-bg);
+      border: 1px solid var(--border-color);
+      border-radius: var(--radius);
+      text-align: center;
+      padding: 30px;
+    }
+    .team-member-card img {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-bottom: 15px;
+      border: 3px solid var(--border-color);
+    }
+    .team-member-card h3 {
+      margin: 10px 0 5px;
+    }
+    .team-member-card .specialty {
+      color: var(--primary-color);
+      font-weight: bold;
+      margin-bottom: 10px;
+    }
+    .why-us-section {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+        gap: 20px;
+        margin-top: 20px;
+    }
+    .why-us-item {
+        background: #f8fafc;
+        padding: 20px;
+        border-radius: var(--radius);
+        text-align: center;
+    }
+    .why-us-item .icon {
+        font-size: 2rem;
+    }
+  </style>
 </head>
 <body>
 
 <header class="container">
   <div class="nav">
-    <div class="brand"><a href="index.html">🏥 <span data-site-name>Healthcare Tips</span></a></div>
+    <div class="brand"><a href="index.html">🏥 <span data-site-name></span></a></div>
     <button class="menu" onclick="toggleMenu()">☰</button>
     <div id="navlinks" class="links">
       <a href="index.html">Home</a>
@@ -23,27 +84,75 @@
   </div>
 </header>
 
-  <main class="container">
-    <h1>About</h1>
-    <p><strong><span data-owner>Owner</span></strong> runs <span data-site-name>Healthcare Tips</span>, sharing actionable health knowledge — diet, fitness and preventive care — in simple language.</p>
-    <h2>Mission</h2>
-    <p>Make reliable health education accessible to everyone.</p>
-    <h2>Team of Doctors</h2>
-    <div class="doctors">
-      <div class="doc"><img src="assets/doctor1.jpg" alt=""><div><strong>Dr. Anjali Sharma</strong><div class="small">Cardiologist</div></div></div>
-      <div class="doc"><img src="assets/doctor2.jpg" alt=""><div><strong>Dr. Rajesh Verma</strong><div class="small">Neurologist</div></div></div>
-      <div class="doc"><img src="assets/doctor3.jpg" alt=""><div><strong>Dr. Priya Kapoor</strong><div class="small">Pediatrician</div></div></div>
-      <div class="doc"><img src="assets/doctor4.jpg" alt=""><div><strong>Dr. Amit Singh</strong><div class="small">Orthopedic Surgeon</div></div></div>
+  <main>
+    <section class="about-header">
+      <div class="container">
+        <h1>About Us</h1>
+        <p><span data-owner></span> runs <span data-site-name></span> to share actionable health knowledge—covering diet, fitness, and preventive care—in simple, easy-to-understand language.</p>
+      </div>
+    </section>
+
+    <div class="container" style="margin-top: 40px;">
+      <h2>Our Mission</h2>
+      <p>Our mission is to make reliable, expert-backed health education accessible to everyone. We believe that with the right knowledge, individuals can make informed decisions to live healthier, happier lives. We break down complex medical topics into clear, practical advice you can use every day.</p>
+
+      <h2 style="margin-top: 40px;">Why Choose Us?</h2>
+      <div class="why-us-section">
+          <div class="why-us-item">
+              <div class="icon">💡</div>
+              <h3>Expert Knowledge</h3>
+              <p class="small">Content is written and verified by qualified medical professionals.</p>
+          </div>
+          <div class="why-us-item">
+              <div class="icon">❤️</div>
+              <h3>Patient-Focused</h3>
+              <p class="small">We prioritize your health questions and concerns in every article.</p>
+          </div>
+          <div class="why-us-item">
+              <div class="icon">✅</div>
+              <h3>Simple & Clear</h3>
+              <p class="small">We avoid jargon and provide advice that is easy to understand and follow.</p>
+          </div>
+      </div>
+
+      <h2 style="margin-top: 40px;">Meet Our Team</h2>
+      <div class="team-grid">
+        <div class="team-member-card">
+          <img src="https://images.unsplash.com/photo-1576091160550-2173dba999ef?q=80&w=400&auto=format&fit=crop" alt="Photo of Dr. Anjali Sharma">
+          <h3>Dr. Anjali Sharma</h3>
+          <div class="specialty">Cardiologist</div>
+          <p class="small">With over 15 years of experience, Dr. Sharma specializes in preventive cardiology and heart health education.</p>
+        </div>
+        <div class="team-member-card">
+          <img src="https://images.unsplash.com/photo-1537368910025-700350796527?q=80&w=400&auto=format&fit=crop" alt="Photo of Dr. Rajesh Verma">
+          <h3>Dr. Rajesh Verma</h3>
+          <div class="specialty">Neurologist</div>
+          <p class="small">Dr. Verma is a leading expert in brain health, memory care, and managing neurological conditions.</p>
+        </div>
+        <div class="team-member-card">
+          <img src="https://images.unsplash.com/photo-1594824476967-48c8b964273f?q=80&w=400&auto=format&fit=crop" alt="Photo of Dr. Priya Kapoor">
+          <h3>Dr. Priya Kapoor</h3>
+          <div class="specialty">Pediatrician</div>
+          <p class="small">Dr. Kapoor is dedicated to children's health, focusing on nutrition and developmental milestones.</p>
+        </div>
+        <div class="team-member-card">
+          <img src="https://images.unsplash.com/photo-1622253692010-333f2da6031d?q=80&w=400&auto=format&fit=crop" alt="Photo of Dr. Amit Singh">
+          <h3>Dr. Amit Singh</h3>
+          <div class="specialty">Orthopedic Surgeon</div>
+          <p class="small">Dr. Singh helps patients with bone and joint health, from sports injuries to chronic conditions.</p>
+        </div>
+      </div>
     </div>
   </main>
 
 <footer class="container footer">
   <div>
-    © <span data-year></span> <span data-owner>Owner Name</span>. All rights reserved. · Built by <span data-maker>Maker</span>
+    © <span data-year></span> <span data-owner></span>. All rights reserved. · Built by <span data-maker></span>
   </div>
   <div id="social-links" class="small" style="margin-top:6px;"></div>
-  <div class="small" style="margin-top:6px;"><span data-address>Address</span> · <a href="mailto:" data-email>Email</a> · <span data-phone>Phone</span></div>
+  <div class="small" style="margin-top:6px;"><span data-address></span></div>
 </footer>
+
 <script src="assets/app.js"></script>
 
 </body>
