--- a/about.html
+++ b/about.html
@@ -124,7 +124,7 @@
           <p class="small">With over 15 years of experience, Dr. Sharma specializes in preventive cardiology and heart health education.</p>
         </div>
         <div class="team-member-card">
-          <img src="https://images.unsplash.com/photo-1537368910025-700350796527?q=80&w=400&auto=format&fit=crop" alt="Photo of Dr. Rajesh Verma">
+         <img src="https://images.unsplash.com/photo-1612349317150-e413f6a5b16d?q=80&w=800&auto=format&fit=crop" alt="डॉ. अंजलि शर्मा का फोटो">
           <h3>Dr. Rajesh Verma</h3>
           <div class="specialty">Neurologist</div>
           <p class="small">Dr. Verma is a leading expert in brain health, memory care, and managing neurological conditions.</p>
