--- a/about.html
+++ b/about.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
 <head>
@@ -7,18 +6,11 @@
   <title>About — Healthcare Tips</title>
   <link rel="stylesheet" href="assets/style.css" />
   <style>
-    .about-header {
-      text-align: center;
-      padding: 40px 0;
-      background-color: #f8fafc;
-      border-bottom: 1px solid var(--border-color);
-    }
-    .about-header h1 {
-      margin-top: 0;
-    }
-    .about-header p {
+    /* Removed .about-header styles for a cleaner look */
+    .about-intro {
       max-width: 700px;
-      margin: 10px auto 0;
+      margin: 0 auto 40px;
+      text-align: center;
       font-size: 1.1rem;
       color: var(--muted-color);
     }
@@ -84,15 +76,13 @@
   </div>
 </header>
 
-  <main>
-    <section class="about-header">
-      <div class="container">
-        <h1>About Us</h1>
-        <p><span data-owner></span> runs <span data-site-name></span> to share actionable health knowledge—covering diet, fitness, and preventive care—in simple, easy-to-understand language.</p>
-      </div>
-    </section>
+  <main class="container" style="margin-top: 40px; text-align: center;">
+    <h1>About Us</h1>
+    <p class="about-intro">
+      <span data-owner></span> runs <span data-site-name></span> to share actionable health knowledge—covering diet, fitness, and preventive care—in simple, easy-to-understand language.
+    </p>
 
-    <div class="container" style="margin-top: 40px;">
+    <div style="text-align: left;">
       <h2>Our Mission</h2>
       <p>Our mission is to make reliable, expert-backed health education accessible to everyone. We believe that with the right knowledge, individuals can make informed decisions to live healthier, happier lives. We break down complex medical topics into clear, practical advice you can use every day.</p>
 
@@ -124,7 +114,7 @@
           <p class="small">With over 15 years of experience, Dr. Sharma specializes in preventive cardiology and heart health education.</p>
         </div>
         <div class="team-member-card">
-         <img src="https://images.unsplash.com/photo-1612349317150-e413f6a5b16d?q=80&w=800&auto=format&fit=crop" alt="डॉ. अंजलि शर्मा का फोटो">
+          <img src="https://images.unsplash.com/photo-1537368910025-700350796527?q=80&w=400&auto=format&fit=crop" alt="Photo of Dr. Rajesh Verma">
           <h3>Dr. Rajesh Verma</h3>
           <div class="specialty">Neurologist</div>
           <p class="small">Dr. Verma is a leading expert in brain health, memory care, and managing neurological conditions.</p>
