--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Home — Healthcare Tips</title>
   <link rel="stylesheet" href="assets/style.css" />
+  <link rel="sitemap" type="application/xml" title="Sitemap" href="https://healthcaretips.shop/sitemap.xml">
   <style>
     /* यह स्टाइल तस्वीरों को गोल और सही आकार का बना देगा */
     .doctors .doc img {
