--- a/policy.html
+++ b/policy.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Policy — Healthcare Tips</title>
   <link rel="stylesheet" href="assets/style.css" />
+  <link rel="sitemap" type="application/xml" title="Sitemap" href="https://healthcaretips.shop/sitemap.xml">
   <style>
     .article-page h2 { margin-top: 40px; }
     .article-page h3 { margin-top: 24px; }
