--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Contact — Healthcare Tips</title>
   <link rel="stylesheet" href="assets/style.css" />
+  <link rel="sitemap" type="application/xml" title="Sitemap" href="https://healthcaretips.shop/sitemap.xml">
   <style>
     .contact-wrapper {
       max-width: 700px; /* Center content in a narrower column */
