--- a/blog.html
+++ b/blog.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Blog — Healthcare Tips</title>
   <link rel="stylesheet" href="assets/style.css" />
+  <link rel="sitemap" type="application/xml" title="Sitemap" href="https://healthcaretips.shop/sitemap.xml">
 </head>
 <body>
 
