--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>About — Healthcare Tips</title>
   <link rel="stylesheet" href="assets/style.css" />
+  <link rel="sitemap" type="application/xml" title="Sitemap" href="https://healthcaretips.shop/sitemap.xml">
   <style>
     /* Removed .about-header styles for a cleaner look */
     .about-intro {
